cabal-version:      2.4
name:               databass
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lauren Arnett
maintainer:         lba2138@columbia.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:     src

  -- cabal-fmt: expand src
  --
  exposed-modules:
    DBMain
    QueryLanguage
    QueryLanguage.Fancy
    QueryLanguage.Fancy.API
    QueryLanguage.Fancy.Examples

  build-depends:
    , b-tree
    , base             <5
    , binary
    , foldl
    , lens
    , pipes
    , relude
    , type-level-sets

  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    PartialTypeSignatures
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

executable databass
  main-is:        Main.hs
  ghc-options:    -Wall
  default-language:   Haskell2010
  build-depends:
    , base      <5
    , databass

  hs-source-dirs: app
