cabal-version: 2.4
name:          databass
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:   https://github.com/laurenarnett/databass/issues

-- The license under which the package is released.
license:       MIT
author:        Lauren Arnett, Joseph Morag
maintainer:    lba2138@columbia.edu, jm@josephmorag.com
category:      Database
homepage:      https://github.com/laurenarnett/databass

library
  hs-source-dirs:     src

  -- cabal-fmt: expand src
  --
  exposed-modules:
    Databass
    Databass.MapDB
    Databass.QueryLanguage

  other-modules:
    Databass.Blog

  build-depends:
    , aeson
    , base             <5
    , binary
    , foldl
    , lens
    , relude           ^>=1
    , type-level-sets

  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    PartialTypeSignatures
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

executable manifesto
  main-is:            Manifesto.hs
  ghc-options:        -O0
  default-language:   Haskell2010
  build-depends:
    , aeson
    , base             <5
    , databass
    , foldl
    , lens
    , type-level-sets

  hs-source-dirs:     app
